# dispatch

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: 架构图.drawio
proto/: event.proto  fsm.proto  hello.proto  message.proto  services.proto  task_services.proto  worker_services.proto
src/: build_grpc.rs  server.rs
src/app/: mod.rs
src/app/controls/: mod.rs  server.rs  task_controller.rs  util.rs  worker_controller.rs
src/app/dao/: mod.rs  task_dao.rs
src/app/entity/: mod.rs  sub_task.rs  task.rs
src/app/middle/: common.rs  concurrent_interceptor.rs  log_interceptor.rs  mod.rs
src/app/schedule/: mod.rs  task_allocation.rs  task_dispatch.rs
src/app/util/: grpc_middle.rs
src/cmd/: mod.rs  on_exit.rs  run.rs
src/conf/: config.rs  config.toml  mod.rs
src/infra/: mod.rs
src/infra/client/: mod.rs
src/infra/client/manager/: interface.rs  manager_entity.rs  mod.rs
src/infra/client/mongo/: client.rs
src/infra/client/redis/: mod.rs  redis_election.rs  redis_pool.rs
src/infra/election/: election_interface.rs  election_manager.rs  mod.rs
src/infra/middle/: common.rs
src/infra/pool/: mod.rs  pool_entity.rs  pool_interface.rs
src/infra/util/: mod.rs  rand.rs  sony_flake.rs
src/pb/: pb.rs
